# mimer

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
config/: config.yaml  generated_tags.yaml
src/imppkg/: chroma_data_loader.py  config.env  create_config.py  load_config.py  main_sqlite_draft.py
