[metadata]
name = mimer
version = 0.0.1
description = This package creates Retrieval-Augmented Generation (RAG) with LLM and Chroma. Documents are added to Chroma from a SQLite database and LLM prompting is adapted to the knowledge represented by the documents.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/carljohanrehn/mimer.git
author = Carl Johan Rehn
author_email = "Carl Johan Rehn" <care02@gmail.com>
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.12
install_requires =
    seaborn
    matplotlib
    numpy
    tqdm
    pandas
    scikit-learn
    torch
    torchvision
    torchaudio
    ipython
    jupyter
    jupyterlab
    jax
    jaxlib
    flax
    optax
    tensorflow-cpu
    tensorflow_datasets
    llama-index
    google-generativeai
    python-dotenv
    llama-index-llms-gemini
    chromadb
    tiktoken
    returns

[options.packages.find]
where = src
exclude =
    test*
